# rez-nuke

./: .gitignore  CMakeLists.txt  README.md  build-linux.yml  extract.sh  install-linux.yml  install.sh  main.yml  package.py  vars-linux.yml
wrappers/linux/: hiero.sh.j2  hieroplayer.sh.j2  nuke.sh.j2  nukeassist.sh.j2  nukestudio.sh.j2  nukex.sh.j2
